--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "update-2k24",
+  "name": "update-2k25",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -20,7 +20,7 @@
     "@radix-ui/react-collapsible": "1.1.2",
     "@radix-ui/react-context-menu": "2.2.4",
     "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-hover-card": "1.1.4",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-menubar": "1.1.4",
@@ -48,13 +48,13 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
-    "geist": "latest",
+    "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.5.4",
     "next": "15.2.4",
     "next-auth": "^4.24.7",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.6.15",
     "react": "^19.0.0",
     "react-day-picker": "9.8.0",
